added axios and made call to quote api

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Frontend Masters React</title>
+  <title>React</title>
 </head>
 <body>
   <div id="app">React has not yet rendered</div>
